# website

./: .gitignore  mkdocs.yml  requirements.txt
.github/workflows/: deploy.yml
_compat/: mkdocs_static_compat.py  setup.cfg
docs/: CNAME
docs/en/: benchmarks.md  getting-started.md  index.md
docs/en/algorithms/: agemoea.md  ibea.md  index.md  moead.md  nsgaii.md  nsgaiii.md  rvea.md  smpso.md  smsemoa.md  spea2.md
docs/en/api/: index.md
docs/en/tutorials/: custom-problem.md  quickstart.md  tuning.md
docs/stylesheets/: extra.css
