[metadata]
name = mkdocs-static-i18n-compat
version = 0.1.0
description = Compat shim: registers static-i18n entry point for mkdocs-static-i18n >= 1.0

[options]
py_modules = mkdocs_static_compat
install_requires =
    mkdocs-static-i18n>=1.2

[options.entry_points]
mkdocs.plugins =
    static-i18n = mkdocs_static_compat:StaticI18n
